@@ -34,7 +34,7 @@ RELEASE 1.2.0.d20090223 - Mon, 23 Feb 2009 08:41:06 -0800
         features will still be supported in 1.3.0 but will generate
         mandatory, non-disableable warnings:
 
-            --  Support for Python versions 1.5, 1.6, 2.0 and 2.1.
+            --  Support for Python versions 1.5, 1.6, 2.0, 2.1, 2.2 and 2.3.
             --  The overrides= keyword argument to the Builder() call.
             --  The scanner= keyword argument to the Builder() call.
             --  The BuildDir() function and env.BuildDir() method.
