@@ -25,6 +25,9 @@ RELEASE X.X.X - XXX
       Compilers. This will be rolled out to other platforms/tools
       in the future.
 
+    - Add check for python >= 3.0.0 and exit gracefully.
+      For 1.3 python >= 1.5.2 and < 3.0.0 are supported
+
   From Lukas Erlinghagen:
 
     - Have AddOption() remove variables from the list of
